Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Various upgrade fixes that stopped an upgrade from CPS 3.2.4.
- The member folder path got reset on any kind of import.
- Remove certain allowed portal types from Sections, as they were also removed
  from Workspaces
- Remove 'Last login' option in a search form if member doesn't have
  a 'last_login_time' property.
- Image Portlet used to cache too much (added the 'protocol' cache param)
- Fix manager account first/last name.
- In the old installer (cpsinstall), removed a ";" in the guard of the create
  transition of the section_folder_wf which was making it impossible to
  programmatically create a section (ie without using the folder_factories UI).
- Fixed XHTML validity bug in content_lib_display_contents_column. Fixes #1572.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Add CSS class for comments display listed.
- Reenabled the CSS validation tests but now using a local W3C CSS validator if
  one is found.