@@ -18,6 +18,8 @@ Bug fixes:
   transition of the section_folder_wf which was making it impossible to
   programmatically create a section (ie without using the folder_factories UI).
 - Fixed XHTML validity bug in content_lib_display_contents_column. Fixes #1572.
+- Allow Contributor local role to be used in Sections and Workspaces; filtered
+  local roles in the Members Workspace as in Workspaces
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Add CSS class for comments display listed.
